versions/v2.9/modules/en/pages/cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc
= Project Resource Quotas
:page-languages: [en, zh]
:revdate: 2024-11-19
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/manage-projects/manage-project-resource-quotas/index.adoc 
:product-path: cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc
:experimental:
ifeval::["{build-type}" != "community"]
:xref-projects-and-namespaces: xref:cluster-admin/manage-clusters/projects-and-namespaces.adoc
:xref-resource-quota-types: xref:cluster-admin/project-admin/project-resource-quotas/resource-quota-types.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-projects-and-namespaces: xref:how-to-guides/new-user-guides/manage-clusters/projects-and-namespaces.adoc
:xref-resource-quota-types: xref:how-to-guides/advanced-user-guides/manage-projects/manage-project-resource-quotas/resource-quota-types.adoc
endif::[]

In situations where several teams share a cluster, one team may overconsume the resources available: CPU, memory, storage, services, Kubernetes objects like pods or secrets, and so on.  To prevent this overconsumption, you can apply a _resource quota_, which is a Rancher feature that limits the resources available to a project or namespace.

This page is a how-to guide for creating resource quotas in existing projects.

Resource quotas can also be set when a new project is created. For details, refer to the section on {xref-projects-and-namespaces}#_creating_projects[creating new projects.]

Resource quotas in Rancher include the same functionality as the https://kubernetes.io/docs/concepts/policy/resource-quotas/[native version of Kubernetes]. In Rancher, resource quotas have been extended so that you can apply them to projects. For details on how resource quotas work with projects in Rancher, refer to xref:cluster-admin/project-admin/project-resource-quotas/resource-quotas-in-projects.adoc[this page.]

== Applying Resource Quotas to Existing Projects

Edit resource quotas when:

* You want to limit the resources that a project and its namespaces can use.
* You want to scale the resources available to a project up or down when a resource quota is already in effect.

. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to apply a resource quota and click *Explore*.
. Click menu:Cluster[Projects/Namespaces].
. Make sure that the *Projects/Namespaces* page is in *Group by Project* view mode.
 image::edit-project-config-for-resource-quotas-group-by-project.png[Screenshot highlighting the "Group by Project" icon, above the list of projects. It resembles a folder.]
. Find the project that you want to add a resource quota to, and select the *⋮* that's on the same row as the project's name.
 image::edit-project-config-for-resource-quotas-dots.png[Screenshot highlighting triple dots icon at the end of the same row as the project name.]
. Select *Edit Config*.
. Expand *Resource Quotas* and click *Add Resource*. Alternatively, you can edit existing quotas.
. Select a Resource Type. For more information on types, see the {xref-resource-quota-types}[quota type reference.]
. Enter values for the *Project Limit* and the *Namespace Default Limit*.
+
|===
| Field | Description

| Project Limit
| The overall resource limit for the project.

| Namespace Default Limit
| The default resource limit available for each namespace. This limit is propagated to each namespace in the project. The combined limit of all project namespaces shouldn't exceed the project limit.
|===

. *Optional:* Add more quotas.
. Click *Create*.

*Result:* The resource quota is applied to your project and namespaces. When you add more namespaces in the future, Rancher validates that the project can accommodate the namespace. If the project can't allocate the resources, you may still create namespaces, but they will be given a resource quota of 0. Subsequently, Rancher will not allow you to create any resources restricted by this quota.
